[package]
name = "mywallet"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
base58 = "0.2.0"
bip32 = "0.5.2"
bip39 = { version = "2.0.0", features = ["chinese-simplified", "rand_core"] }
blake2b_simd = "1.0.2"
dotenv = "0.15.0"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.8"
sha3 = "0.10.8"
